--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,8 @@ knitr::opts_chunk$set(
 # gamsnip
 
 <!-- badges: start -->
+[![Codecov test coverage](https://codecov.io/gh/business-science/gamsnip/branch/master/graph/badge.svg)](https://codecov.io/gh/business-science/gamsnip?branch=master)
+[![R-CMD-check](https://github.com/business-science/gamsnip/workflows/R-CMD-check/badge.svg)](https://github.com/business-science/gamsnip/actions)
 <!-- badges: end -->
 
 The goal of gamsnip is to ...
