gam_mod: add examples

--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/business-science/gamsnip/workflows/R-CMD-check/badge.svg)](https://github.com/business-science/gamsnip/actions)
 <!-- badges: end -->
 
-The goal of gamsnip is to ...
+This package is currently under development. 
 
 ## Installation
 
