--- a/README.Rmd
+++ b/README.Rmd
@@ -13,11 +13,11 @@ knitr::opts_chunk$set(
 )
 ```
 
-# gamsnip
+# modelgam
 
 <!-- badges: start -->
-[![Codecov test coverage](https://codecov.io/gh/business-science/gamsnip/branch/master/graph/badge.svg)](https://codecov.io/gh/business-science/gamsnip?branch=master)
-[![R-CMD-check](https://github.com/business-science/gamsnip/workflows/R-CMD-check/badge.svg)](https://github.com/business-science/gamsnip/actions)
+[![Codecov test coverage](https://codecov.io/gh/business-science/modelgam/branch/master/graph/badge.svg)](https://codecov.io/gh/business-science/modelgam?branch=master)
+[![R-CMD-check](https://github.com/business-science/modelgam/workflows/R-CMD-check/badge.svg)](https://github.com/business-science/modelgam/actions)
 <!-- badges: end -->
 
 This package is currently under development. 
@@ -28,6 +28,6 @@ Development version:
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("business-science/gamsnip")
+devtools::install_github("business-science/modelgam")
 ```
 
