--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -10,10 +10,19 @@ vignette: >
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  
+  out.width='100%',
+  fig.align = "center",
+  fig.width = 7,
+  fig.height = 5,
+  
+  message = FALSE,
+  warning = FALSE
 )
 ```
 
 ```{r setup}
 library(modelgam)
 ```
+
